--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "baseURL": "http://tin6.com",
+    "baseURL": "https://tin6.com",
     "languageCode": "zh-cn",
     "MetaDataFormat":"json",
     "title": "消夏錄",
