--- a/config.json
+++ b/config.json
@@ -5,16 +5,38 @@
     "title": "消夏錄",
     "theme": "hiruko",
     "markup": {
-       "blackfriday": {
-          "hrefTargetBlank":true,
-          "nofollowLinks":true,
-          "smartypants":false,
-          "hardLineBreak":true,
-          "taskLists": true,
-          "plainIDAnchors":false,
-          "latexDashes": true,
-          "noreferrerLinks":true
-        }
+      "goldmark": {
+         "extensions": {
+            "definitionList": true,
+            "footnote": true,
+            "linkify": true,
+            "strikethrough": true,
+            "table": true,
+            "taskList": true,
+            "typographer": true
+         },
+         "parser": {
+            "attribute": true,
+            "autoHeadingID": true,
+            "autoHeadingIDType": "github"
+         },
+         "renderer": {
+            "hardWraps": false,
+            "unsafe": true,
+            "xHTML": false
+         }
+      },
+      "highlight": {
+         "codeFences": false,
+         "guessSyntax": false,
+         "hl_Lines": "",
+         "lineNoStart": 1,
+         "lineNos": false,
+         "lineNumbersInTable": false,
+         "noClasses": false,
+         "style": "monokai",
+         "tabWidth": 4
+      }
     },
     "enableEmoji":"true",
     "enableRobotsTXT":"true",
