edit 404.html and netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,3 +28,13 @@ HUGO_VERSION = "0.66.0"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 404
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
