--- a/netlify.toml
+++ b/netlify.toml
@@ -31,7 +31,7 @@ HUGO_ENABLEGITINFO = "true"
 
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/404.html"
   status = 404
 
 [[headers]]
