--- a/now.json
+++ b/now.json
@@ -6,10 +6,6 @@
   },
 
 "routes": [
-    {
-      "src": "/.*",
-      "status": 404,
-      "dest": "404.html"
-    }
-  ]
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "status": 404, "dest": "/404.html" }  ]
 }
