--- a/now.json
+++ b/now.json
@@ -7,5 +7,5 @@
 
 "routes": [
     { "handle": "filesystem" },
-    { "src": "/(.*)", "status": 404, "dest": "/404.html" }  ]
+    { "src": "/.*", "status": 404, "dest": "404.html" }  ]
 }
