--- a/now.json
+++ b/now.json
@@ -4,12 +4,15 @@
       "HUGO_VERSION": "0.68.3"
     }
   },
-
-"routes": [
-    {"src": "^/dist/js/(.*)", "headers": {"cache-control": "public,max-age=31536000,immutable"} },
-    {"src": "^/dist/css/(.*)", "headers": {"cache-control": "public,max-age=31536000,immutable"} },
-    {"src": "^/images/(.*)", "headers": {"cache-control": "max-age=31536000,immutable"} },
-    {"src": "^/(.*).html", "headers": {"cache-control": "public,max-age=0,must-revalidate"} },
-    { "handle": "filesystem" },
-    { "src": "/.*", "status": 404, "dest": "404.html" }  ]
+"version": 2,
+ "routes": [
+        {
+            "handle": "filesystem"
+        },
+        {
+            "src": "/(.*)",
+            "status": 404,
+            "dest": "/404.html"
+        }
+    ]
 }
