--- a/config.json
+++ b/config.json
@@ -139,7 +139,7 @@
         },
         "CDN": {
             "JQuery": {
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "3.4.1"
             },
             "JQueryMouseWheel": {
@@ -159,7 +159,7 @@
                 "Version": "3.5.6"
             },
             "Bootstrap": {
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "3.4.1"
             },
             "Mermaid":{
@@ -194,11 +194,11 @@
                 "Version": "7.7.5"
             },
             "photoswipe": {
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "4.1.3"
             },
             "vanillaback2top":{
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "7.2.1"
             },
             "Aplayer": {
