--- a/config.json
+++ b/config.json
@@ -143,7 +143,7 @@
                 "Version": "2.2.4"
             },
             "JQueryMouseWheel": {
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "3.1.13"
             },
             "JQueryUI": {
@@ -155,7 +155,7 @@
                 "Version": "1.9.0"
             },
             "FancyBox": {
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "3.5.6"
             },
             "Bootstrap": {
@@ -163,7 +163,7 @@
                 "Version": "3.4.1"
             },
             "Mermaid":{
-                 "Path": "/js/libs",
+                 "Path": "//cdn.staticfile.org",
                 "Version": "8.4.8"
             },
             "HighLight": {
@@ -204,14 +204,14 @@
                  "//": "无cdn.static.org镜像，本地路径需重新设置"
             },
             "Aplayer": {
-                "Path": "/js/libs",
+                "Path": "//cdn.staticfile.org",
                 "Version": "1.10.1",
                  "//": "无cdn.static.org镜像"
             },
             "Meting": {
-                "Path": "/js/libs",
+                "Path": "//cdn.jsdelivr.net",
                 "Version": "1.1.1",
-                "//": "无cdn.static.org镜像"
+                 "//": "无cdn.static.org镜像，本地路径需重新设置"
             }
         }
     },
